--- a/service/package.json
+++ b/service/package.json
@@ -18,6 +18,7 @@
     "eventproxy": "^0.3.5",
     "express": "~4.13.1",
     "mailgun-js": "^0.7.14",
+    "mongoose": "^4.7.4",
     "morgan": "~1.6.1",
     "nodemon": "^1.11.0",
     "serve-favicon": "~2.3.0",
