backedn manage system launch

--- a/service/package.json
+++ b/service/package.json
@@ -2,27 +2,70 @@
   "name": "service",
   "version": "0.0.0",
   "private": true,
-  "scripts": {
-    "start": "node ./bin/www",
-    "dev": "nodemon --debug ./bin/www"
-  },
   "dependencies": {
+    "antd": "^2.7.0",
     "async": "^2.1.4",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^6.2.10",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-import": "^1.1.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-react-display-name": "^6.22.0",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-polyfill": "^6.22.0",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-react": "^6.22.0",
+    "babel-preset-stage-0": "^6.22.0",
+    "babel-preset-stage-3": "^6.22.0",
+    "babel-register": "^6.22.0",
     "body-parser": "~1.13.2",
     "canvas": "^1.6.2",
     "cheerio": "^0.22.0",
     "cheero": "0.0.1",
     "cookie-parser": "~1.3.5",
+    "css-loader": "^0.26.1",
     "debug": "~2.2.0",
     "ejs": "~2.3.3",
     "eventproxy": "^0.3.5",
     "express": "~4.13.1",
+    "express-session": "^1.15.0",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
+    "file-loader": "^0.10.0",
+    "http-proxy": "^1.16.2",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "mailgun-js": "^0.7.14",
     "mongoose": "^4.7.4",
     "morgan": "~1.6.1",
+    "node-sass": "^4.5.0",
     "nodemon": "^1.11.0",
+    "npm-run-all": "^4.0.1",
+    "postcss-loader": "^1.2.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-hot-loader": "^1.3.1",
+    "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
+    "redux": "^3.6.0",
+    "sass-loader": "^5.0.0",
     "serve-favicon": "~2.3.0",
+    "style-loader": "^0.13.1",
     "superagent": "^3.1.0",
-    "superagent-retry": "^0.6.0"
+    "superagent-retry": "^0.6.0",
+    "universal-webpack": "^0.3.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.2.1",
+    "whatwg-fetch": "^2.0.2"
+  },
+  "scripts": {
+    "hmr": "nodemon ./src/hmr/entry.js --watch ./src/hmr --watch ./webpack",
+    "api": "nodemon ./src/api/app.js --watch ./src/api",
+    "build-webpack": "webpack --config ./webpack/webpack.config.js --colors --display-error-details",
+    "build-page": "webpack --config ./webpack/server/webpack.config.server.babel.js --watch --colors --display-error-details",
+    "run-page": "nodemon ./src/client/server/server.render.babel.js --watch ./src/client --watch ./webpack",
+    "run-page-delay": "npm-run-all delay run-page ",
+    "page": "npm-run-all  --parallel build-page run-page-delay",
+    "dev": "npm-run-all --parallel hmr page",
+    "delay": "node ./src/sleep 2000"
   }
 }
