--- a/service/package.json
+++ b/service/package.json
@@ -20,6 +20,7 @@
     "babel-register": "^6.22.0",
     "body-parser": "~1.13.2",
     "canvas": "^1.6.2",
+    "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
     "cheero": "0.0.1",
     "cookie-parser": "~1.3.5",
@@ -47,6 +48,7 @@
     "react-redux": "^5.0.2",
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
+    "request": "^2.79.0",
     "sass-loader": "^5.0.0",
     "serve-favicon": "~2.3.0",
     "style-loader": "^0.13.1",
@@ -59,13 +61,13 @@
   },
   "scripts": {
     "hmr": "nodemon ./src/hmr/entry.js --watch ./src/hmr --watch ./webpack",
-    "api": "nodemon ./src/api/app.js --watch ./src/api",
+    "api": "nodemon ./src/api/app.js --watch ./src/api/",
     "build-webpack": "webpack --config ./webpack/webpack.config.js --colors --display-error-details",
     "build-page": "webpack --config ./webpack/server/webpack.config.server.babel.js --watch --colors --display-error-details",
     "run-page": "nodemon ./src/client/server/server.render.babel.js --watch ./src/client --watch ./webpack",
     "run-page-delay": "npm-run-all delay run-page ",
     "page": "npm-run-all  --parallel build-page run-page-delay",
-    "dev": "npm-run-all --parallel hmr page api",
+    "dev": "npm-run-all --parallel api hmr page",
     "delay": "node ./src/sleep 2000"
   }
 }
